substrate/primitives/api/test/tests/ui/impl_missing_version.stderr
error[E0405]: cannot find trait `ApiV4` in module `self::runtime_decl_for_api`
  --> tests/ui/impl_missing_version.rs:35:13
   |
25 |     pub trait Api {
   |     ------------- similarly named trait `ApiV2` defined here
...
35 |     impl self::Api<Block> for Runtime {
   |                ^^^ help: a trait with a similar name exists: `ApiV2`

error[E0053]: method `execute_block` has an incompatible type for trait
  --> tests/ui/impl_missing_version.rs:45:23
   |
45 |         fn execute_block(_: Block) {
   |                             ^^^^^ expected `LazyBlock<Header<u64, BlakeTwo256>, ...>`, found `Block<Header<u64, BlakeTwo256>, ...>`
   |
   = note: expected signature `fn(sp_runtime::generic::LazyBlock<sp_runtime::generic::Header<u64, BlakeTwo256>, UncheckedExtrinsic<CryptoBytes<32, Sr25519PublicTag>, RuntimeCall, CryptoBytes<64, (SignatureTag, Sr25519Tag)>, ((frame_system::extensions::check_nonce::CheckNonce<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::check_weight::CheckWeight<substrate_test_runtime_client::substrate_test_runtime::Runtime>), CheckSubstrateCall, frame_metadata_hash_extension::CheckMetadataHash<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::weight_reclaim::WeightReclaim<substrate_test_runtime_client::substrate_test_runtime::Runtime>), 16777216>>)`
              found signature `fn(sp_runtime::generic::Block<sp_runtime::generic::Header<u64, BlakeTwo256>, UncheckedExtrinsic<CryptoBytes<32, Sr25519PublicTag>, RuntimeCall, CryptoBytes<64, (SignatureTag, Sr25519Tag)>, ((frame_system::extensions::check_nonce::CheckNonce<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::check_weight::CheckWeight<substrate_test_runtime_client::substrate_test_runtime::Runtime>), CheckSubstrateCall, frame_metadata_hash_extension::CheckMetadataHash<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::weight_reclaim::WeightReclaim<substrate_test_runtime_client::substrate_test_runtime::Runtime>), 16777216>>)`
help: change the parameter type to match the trait
   |
45 -         fn execute_block(_: Block) {
45 +         fn execute_block(_: sp_runtime::generic::LazyBlock<sp_runtime::generic::Header<u64, BlakeTwo256>, UncheckedExtrinsic<CryptoBytes<32, Sr25519PublicTag>, RuntimeCall, CryptoBytes<64, (SignatureTag, Sr25519Tag)>, ((frame_system::extensions::check_nonce::CheckNonce<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::check_weight::CheckWeight<substrate_test_runtime_client::substrate_test_runtime::Runtime>), CheckSubstrateCall, frame_metadata_hash_extension::CheckMetadataHash<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::weight_reclaim::WeightReclaim<substrate_test_runtime_client::substrate_test_runtime::Runtime>), 16777216>>) {
   |
